# ProofBoy

./: .env.example  .gitignore  Cargo.toml  ERC1155ChallengeableMint-input.json  README.md  index.html  justfile  linea-testnet-deployment.txt  package-lock.json  package.json  truffle-config.js
assets/: index-211fb4c1.css  index-24ad261a.js  index-9a4b4354.js  index-c7a8c073.js  index-f44ceedc.js
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.global.css  App.module.css  App.tsx
client/src/components/Display/: Display.tsx
client/src/components/Navigation/: Navigation.tsx
client/src/components/NftPreview/: NftPreview.tsx
client/src/components/PendingMints/: PendingMints.tsx  index.tsx
client/src/components/ProofBoyPlayer/: ProofBoyPlayer.module.css  ProofBoyPlayer.tsx  index.tsx
client/src/contracts/: Address.json  AddressUpgradeable.json  Base64.json  BlockOracle.json  Clone.json  ClonesWithImmutableArgs.json  Context.json  ContextUpgradeable.json  Counters.json  DisputeGameFactory.json  ERC1155.json  ERC1155ChallengeableMint.json  ERC1155URIStorage.json  ERC165.json  FaultDisputeGame.json  GameTypes.json  IBigStepper.json  IBondManager.json  IDisputeGame.json  IDisputeGameFactory.json  IERC1155.json  IERC1155MetadataURI.json  IERC1155Receiver.json  IERC165.json  IERC721Receiver.json  IFaultDisputeGame.json  IInitializable.json  IPreimageOracle.json  Initializable.json  L2OutputOracle.json  LibClock.json  LibHashing.json  LibPosition.json  MIPS.json  NFTCollection.json  OwnableUpgradeable.json  PreimageKeyLib.json  PreimageOracle.json  SafeMath.json  Semver.json  (+3 more)
client/src/utils/: index.ts
contracts/: DisputeGameFactory.sol  ERC1155ChallengeableMint.sol  FaultDisputeGame.sol  NFTCollection.sol  VM.sol
crates/: Cargo.toml
crates/extractor/: Cargo.toml
crates/extractor/src/: lib.rs  memory_reader.rs  metadata.rs
crates/extractor/src/extractors/: flappy_boy_score.rs  id_to_pokedex.rs  mod.rs  pokemon_red_blue_party_leader.rs  super_mario_land_highest_score_before_10_seconds.rs
crates/journal/src/: lib.rs
crates/preimage-server/: Cargo.toml
crates/preimage-server/src/: cli.rs  main.rs  rpc_preimage_provider.rs
crates/proofboy-recorder/: Cargo.toml
crates/proofboy-recorder/src/: app.rs  lib.rs  main.rs
crates/proofboy-verifier/: Cargo.toml
crates/proofboy-verifier-cannon/: Cargo.toml
crates/proofboy-verifier-cannon/src/: gameboy.rs  main.rs
crates/proofboy-verifier-native/: Cargo.toml
crates/proofboy-verifier-native/src/: cli.rs  gameboy.rs  main.rs  preimage_provider.rs
crates/proofboy-verifier/src/: lib.rs
extractor/: Cargo.toml
extractor/src/: lib.rs  metadata.rs
extractor/src/extractors/: id_to_pokedex.rs  mod.rs  pokemon_red_blue_party_leader.rs
journal/: Cargo.toml
journal/src/: key_state.rs  lib.rs
metamask-sdk/: Cargo.toml
metamask-sdk/src/: lib.rs
migrations/: 1_deploy_contracts.js
proofboy-recorder/: Cargo.toml  Trunk.toml  index.html
proofboy-recorder/src/: journal.rs  lib.rs  main.rs
roms/: README.md
subgraph/: docker-compose.yaml  networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: ERC1155ChallengeableMint.json
subgraph/src/: erc-1155-challengeable-mint.ts
subgraph/tests/: erc-1155-challengeable-mint-utils.ts  erc-1155-challengeable-mint.test.ts
test/: challengeable_mint.js
truffle/: package-lock.json  truffle-config.js
truffle/client/: package-lock.json  package.json
truffle/client/src/components/NftPreview/: index.tsx
truffle/client/src/components/ProofBoyPlayer/: ProofBoyPlayer.tsx
truffle/client/src/contracts/: Address.json  Base64.json  Context.json  ERC1155.json  ERC1155URIStorage.json  ERC165.json  ERC721.json  ERC721Enumerable.json  IERC1155.json  IERC1155MetadataURI.json  IERC1155Receiver.json  IERC165.json  IERC721.json  IERC721Enumerable.json  IERC721Metadata.json  NFTCollection.json  Ownable.json  Strings.json
truffle/client/src/hooks/: useMetaMask.tsx
truffle/client/src/types/: index.tsx
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/NftPreview/: NftPreview.module.css  NftPreview.tsx
web/src/components/ProofBoyPlayer/: ProofBoyPlayer.tsx
