[workspace]

resolver = "2"

members = [
    "proofboy-recorder",
    "extractor",
    "journal",
]

[workspace.dependencies]
rgy = { git = "https://github.com/willemolding/rgy", ref = "900beb3" } # my fork of YushiOMOTE/rgy to allow direct memory access
extractor = { path = "./extractor" }
journal = { path = "./journal" }
log = "0.4.19"
serde = { version = "1.0.177", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false, features = ["alloc"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
