[workspace]

resolver = "2"

members = [
    "proofboy-recorder",
    "proofboy-verifier-cannon",
    "preimage-server",
    "extractor",
    "journal",
]

[workspace.dependencies]
rgy = { git = "https://github.com/willemolding/rgy" } # my fork of YushiOMOTE/rgy to allow direct memory access and fast-forward
extractor = { path = "./extractor" }
journal = { path = "./journal" }
log = { version = "0.4.19", features = ["release_max_level_off"] }
serde = { version = "1.0.177", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.104", default-features = false, features = ["alloc"] }

# Enable max optimizations for dependencies, but not for our code when building dev builds:
[profile.dev.package."*"]
opt-level = 3

# Go ham for performance on release builds
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
