[package]
name = "proofboy-recorder"
authors = [ "Willem Olding <willemolding@gmail.com>" ]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.11.0"
log = { workspace = true }
rgy = { workspace = true }
extractor = { workspace = true }
journal = { workspace = true }
wasm-bindgen = "0.2.87"
